# sentinel-harness

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
demo/: PLATFORM.md  platform_demo.py
deploy/: README.md  create_harnesses.sh  deploy.sh  destroy.sh  scan_secrets.sh  seed_registry.sh  smoke.sh
docs/: ARCHITECTURE.md  BLUEPRINT.md  COMPARISON.md  COMPLIANCE.md  COOKBOOK.md  FIDELITY-REPORT.md  GLOSSARY.md  GOVERNANCE.md  HARNESSES.md  INTEGRATIONS.md  MCP-SERVER.md  OBSERVABILITY.md  QUICKSTART.md  RELEASE-v0.2.0.md  RELEASE-v0.4.0.md  RELEASING.md  ROADMAP.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md
eval/: README.md  criteria.yaml
evidence/: README.md  agent_authored_loop_result.json  agent_factory_loop_result.json  autonomous_loop_result.json  bas_replay_result.json  benchmark_report.md  benchmark_result.json  closed_loop_result.json  cve_triage_result.json  detection_gen_result.json  detonation_result.json  drift_fix_registry_clienttoken_live.json  e2e_pipeline_result.json  endpoint_promote_result.json  eval_all_domains_result.json  gateway_lifecycle_result.json  hitl_resume_result.json  live_a2a_runtime_result.json  live_custom_jwt_gateway_result.json  live_dataplane_gate_diagnosis.json  live_managed_evaluator_result.json  live_memory_isolation_result.json  live_memory_recall_result.json  live_online_evaluation_result.json  live_verify_result.json  m4_guardrail_result.json  m4_live_deploy_result.json  multi_harness_result.json  play_mode_checkpoint_approve.json  play_mode_checkpoint_reject.json  play_mode_result.json  registry_governance_result.json  self_improve_loop_result.json  tracing_result.json
iac-cdk/: README.md  package-lock.json  package.json
iac-terraform/: README.md  guardrail.tf  harness.tf  identity.tf  observability.tf  outputs-harness.tf  outputs-identity.tf  outputs-obs.tf  outputs-vpc.tf  providers.tf  variables-common.tf  variables-harness.tf  variables-identity.tf  variables-obs.tf  variables-vpc.tf  versions.tf  vpc.tf
intake/: __init__.py  adapter.py
mockdata/: __init__.py  accounts.py  campaign.py  enterprise.py  world.py
registry/: tools.yaml
scenarios/: scenario_agent_authored_loop.py  scenario_agent_factory_loop.py  scenario_autonomous_loop.py  scenario_bas_replay.py  scenario_benchmark.py  scenario_cve_asset_triage.py  scenario_cve_triage.py  scenario_detection_gen.py  scenario_detonation.py  scenario_e2e_pipeline.py  scenario_egress_control.py  scenario_eval_all_domains.py  scenario_hitl_resume.py  scenario_multi_harness.py  scenario_play_mode.py  scenario_registry_governance.py  scenario_self_improve_loop.py  scenario_tracing.py
sentinel_harness/: cli.py  (+20 more)
(+211 files in other folders)
