[project]
name = "sentinel-harness"
version = "0.1.0"
description = "Production SecOps agents as configuration on Amazon Bedrock AgentCore Harness"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT-0" }
dependencies = ["boto3>=1.40.0", "botocore>=1.43.0", "pyyaml>=6.0"]

[project.scripts]
sentinel = "sentinel_harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sentinel_harness"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# The library and scenarios deliberately use a compact one-statement-per-line
# style (`if x: y`, grouped imports) for readability of declarative config.
# Ignore those stylistic codes so CI lint flags real problems, not house style.
#   E401  multiple imports on one line
#   E701  multiple statements on one line (colon)
#   E702  multiple statements on one line (semicolon)
#   E402  module import not at top of file (scenarios/tests do sys.path insert first)
ignore = ["E401", "E701", "E702", "E402"]
